# task5

./: CMakeLists.txt  README.md  README_5.md  basketball  code.py  code3.cpp  src.cpp
.marscode/: deviceInfo.json
assets/: README.md
code/: 5.cpp  CMakeLists(1).txt  CMakeLists.txt  basketball.cpp  basketball_detect.cpp  bd.cpp  cmakelist.txt  code.cpp  main.cpp  src.cpp
code./: .first.cpp.swp  CMakeLists.txt  first.cpp
code/src/: xiaoheizi.cpp
include/: utils.h
