cmake_minimum_required(VERSION 3.10)
project(BasketballDetect)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(basketball_detect basketball_detect.cpp)
target_link_libraries(basketball_detect ${OpenCV_LIBS})
